[Style] Fix footer floating on small devices

--- a/client/src/components/page/Page.css
+++ b/client/src/components/page/Page.css
@@ -17,6 +17,7 @@
 }
 
 .Page {
+    /* Fix to make page responsiveness */
     /*flex: 1;*/
 }
 
@@ -25,7 +26,8 @@
 
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    /* Fix to make page responsiveness */
+    /*flex-wrap: wrap;*/
 
     @media (--side-by-side) {
         flex-direction: row;
